wrapped provider to resolve error

--- a/src/auth/Login.css
+++ b/src/auth/Login.css
@@ -15,7 +15,7 @@ fieldset {
     border: none;
 }
 
-.container--login {
+.container--login, .register {
     background-color: #F4E4CD;
     width: 60%;
     text-align: center;
